layout com arte da tela lista de metas e tela, objetivo das metas concluido

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -315,10 +315,9 @@
             <div id="div_detalhesProjeto" style="display: none">
                <div  id="detalhesProjeto" class="status_tela">
                   <ul id="ulDetalhesProjeto">
+
+
                   </ul>
-                  <!--  <div class="status">Metas em andamento</div>
-                     <div class="status">São Paulo</div>
-                     <div id="status_local">Meta 02</div> -->
                </div>
                <!-- barra indice de metas -->
                <!--  <div id="subprefeitura">
@@ -476,7 +475,9 @@
          <!-- bloco de informações -->
          <!--  <div id="listaObjetivos" class="list-style list_objetivos"> -->
          <!-- bloco links projetos -->
+         <div class="titulo_objetivo border_bottom_gray cor_3_red"><h2>OBJETIVOS<h2></div>
          <ul id="ulListaObjetivos">
+          
          </ul>
       </div>
       <!-- fim da lista de objetivos -->
