--- a/www/index.html
+++ b/www/index.html
@@ -154,66 +154,7 @@
                <!-- bloco de informações -->
                <div class="num_meta">
                   <ul id="ulListaMetas">
-                     <!-- <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li>
-                        <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li>
-                        <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li>
-                        <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li>
-                        <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li>
-                        <li>
-                        <div class="meta_valor">
-                            <h4>META 05</h4>
-                            <p>com benefício à população</p>
-                            <h1>51,0%</h1>
-                        </div>
-                        <div class="meta_discricao">
-                            <p>Garantir 1000.000 vagas do Programa Nacional de Acesso ao Ensino Técnico e Empregado (PRONATEC)</p>
-                        </div>
-                        </li> -->
+                   
                   </ul>
                </div>
             </div>
@@ -315,10 +256,9 @@
             <div id="div_detalhesProjeto" style="display: none">
                <div  id="detalhesProjeto" class="status_tela">
                   <ul id="ulDetalhesProjeto">
+
+
                   </ul>
-                  <!--  <div class="status">Metas em andamento</div>
-                     <div class="status">São Paulo</div>
-                     <div id="status_local">Meta 02</div> -->
                </div>
                <!-- barra indice de metas -->
                <!--  <div id="subprefeitura">
@@ -476,7 +416,9 @@
          <!-- bloco de informações -->
          <!--  <div id="listaObjetivos" class="list-style list_objetivos"> -->
          <!-- bloco links projetos -->
+         <div class="titulo_objetivo border_bottom_gray cor_3_red"><h2>OBJETIVOS<h2></div>
          <ul id="ulListaObjetivos">
+          
          </ul>
       </div>
       <!-- fim da lista de objetivos -->
