Ajustes finos do layout dos botoes do rodapé, inicio da animação entre telas - ainda com problemas

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -53,7 +53,7 @@
       <!-- fim do topo fixo -->
       <div id="section">
          <!-- inicio da tela 1  -->
-          <div id="div_metasStatus" style="display: initial"> 
+          <div id="div_metasStatus" class="mostra"> 
                      <!-- barra subprefeitura -->
             <div id="bt_Subprefeituras" class="subprefeitura divide_meta">
                <div class="subpref">Subprefeitura</div>
@@ -202,7 +202,7 @@
             <!-- fim da tela 3 -->
 <!-- inicio tela 4 -->
             <div id="div_detalhesProjeto" style="display: none">
-               <div  id="detalhesProjeto" class=" ">
+               <div  id="detalhesProjeto" >
                   <ul id="ulDetalhesProjeto">
 
                      <div class=" cor-cz-1 container-tit-subtit2 ">
@@ -362,7 +362,7 @@
                
       <!-- fim da tela 4 -->
       <!-- iniico da tela 5 -->
-      <div id="div_metasObjetivos" style="display: none">
+      <div id="div_metasObjetivos" class="esconder">
          <!-- bloco de informações -->
          <!--  <div id="listaObjetivos" class="list-style list_objetivos"> -->
          <!-- bloco links projetos -->
