--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
       <!-- fim do topo fixo -->
       <div id="section">
          <!-- inicio da tela 1  -->
-          <div id="div_metasStatus" class="mostra"> 
+          <div id="div_metasStatus" style="display: initial"> 
                      <!-- barra subprefeitura -->
             <div id="bt_Subprefeituras" class="subprefeitura divide_meta">
                <div class="subpref">Subprefeitura</div>
