--- a/www/index.html
+++ b/www/index.html
@@ -102,8 +102,10 @@
                <!-- barra subprefeitura -->
                <div class="subprefeitura">
                   <div class="subpref">Subprefeitura</div>
-                  <div id="listaSubprefeituras_metas" class="distrito">
+                  <div class="distrito">
+                     <select id="listaSubprefeituras_metas" dir='rtl' name='distritos'>
 
+                     </select>
                   </div>
                </div>
                <!-- fim da barra subprefeitura -->
