integração de dados na pagina, detalhe de metas, faltando formatação de algun campos.

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -135,10 +135,12 @@
                </ul>
                <!-- SAITO -->                  
                <!-- bloco links projetos -->
-               <ul id="projetos">
+               <!--<ul id="projetos">-->
+               <ul id="listaProjetosDeMetas">
+
                </ul>
             </div>
-            <!-- </div> -->
+            </div>
             <!-- fim da tela 3 -->
             <!-- inicio tela 4 -->
             <div id="div_detalhesProjeto" class="box-escondido hideme">
