Integração dos dados na tela de tipo de projetos concluida

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -146,14 +146,14 @@
             <div id="div_detalhesProjeto" class="box-escondido hideme">
                <div  id="detalhesProjeto" >
                   <ul id="ulDetalhesProjeto">
-                  <div class=" cor-cz-1 container-tit-subtit2 ">
+                  <!-- <div class=" cor-cz-1 container-tit-subtit2 ">
                      <div class="box-titulo line-cz">METAS J&Aacute; BENEFICIAM POPULA&Ccedil;&Atilde;O</div>
                      <div class="box-titulo line-cz">S&atilde;o Paulo</div>
                      <div id="status_local " class="cor-cz-2 w-100-pct box-subtitulo line-cz">Meta</div>
                   </div>
                   <!-- bloco de informações -->
-                  <div class="list-style reset-marg reset-padd">
-                     <ul class="lista_fake">
+                  <!-- <div class="list-style reset-marg reset-padd">
+                     <ul class="listaDetalheProjeto">
                         <li>
                            <div class="titulo_projetos">
                               <h3 class=" cor_3_red uppercase">Projeto</h3>
@@ -288,7 +288,7 @@
                         </ul> 
                         </div>
                         </li>
-                        </div>
+                        </div> -->
                      </ul>
                   </div>
                </div>
