correçã do css do titulo do projeto em tela detalhes projeto, combobox da tela detalhes da meta implementado, tela de lista de metas atualizando pela combobox lista de subprefeituras. finalizado a integração de dados na header de todas as telas,

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -115,25 +115,33 @@
                   </ul>
                </div>
             </div>
-            <!-- fim da tela 2 --> 
+            <!-- fim da tela 2 -->
             <!-- inicio tela 3 -->
             <div id="div_detalhesMeta" class="box-escondido hideme">
                <div class=" cor-cz-1 container-tit-subtit">
-                  <div class="box-titulo line-cz gray_3">Metas em andamento</div>
-                  <div id="status_local " class="cor-cz-2 w-100-pct box-subtitulo line-cz">S&atilde;o Paulo</div>
+                  <div id="detalhesMeta" class="box-titulo line-cz gray_3">
+                     Metas em andamento
+                  </div>
+                  <div id="status_local" class="cor-cz-2 w-100-pct box-subtitulo line-cz">
+                     S&atilde;o Paulo
+                  </div>
                </div>
                <!-- barra indice de metas -->
                <div class="subprefeitura">
-                  <div class="subpref">Metas</div>
+                  <div class="subpref">
+                     Metas
+                  </div>
                   <div class="distrito">
-                     
-               </div>
+                      <select id="lista_metas_select" dir='rtl' name='distritos'>
+
+                     </select>
+                  </div>
                <!-- fim da barra indice de metas  -->
                <!-- bloco de informações -->
                <!-- SAITO -->
                <ul id="ulDetalhesMeta">
                </ul>
-               <!-- SAITO -->                  
+               <!-- SAITO -->
                <!-- bloco links projetos -->
                <!--<ul id="projetos">-->
                <ul id="listaProjetosDeMetas">
