resolvido botão voltar da tela de detalhes da meta, implementado tela de aguarde

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -373,6 +373,15 @@
          objetivos das metas
          </button>
       </div>
+      <!-- Tela aguarde -->    
+       <div id="telaAguarde" class="w-100-pct h-100-pct pos-fix bg-blk-transp-7 z-idx-102 dspl-blk">
+         <div id="cont_telaAguarde">
+            <h3  class="font-br txt-alg-c" id="msgAguarde">
+               Aguarde, carregando dados...
+            </h3>
+         </div>
+       </div>
+
       <!-- fim dos botoes do rodape -->        
       <script type="text/javascript" src="cordova.js"></script>
       <script type="text/javascript" src="js/index.js"></script>
