ajuste da troca de telas em metas por objetivos

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -92,7 +92,23 @@
                </div>
             </div>
          </div>
-         <!-- fim da tela1 -->
+         <!-- fim da tela meta por status -->
+         <!-- iniico da tela metasObjetivos -->
+         <div id="div_metasObjetivos" style="display: none">
+            <!-- bloco de informações -->
+            <!--  <div id="listaObjetivos" class="list-style list_objetivos"> -->
+            <!-- bloco links projetos -->
+            <div class="titulo_objetivo border_bottom_gray cor_3_red">
+               <h2>
+               OBJETIVOS
+               <h2>
+            </div>
+            <ul id="ulListaObjetivos">
+            </ul>
+         </div>
+         <!-- fim da lista de objetivos -->
+         <!-- fim da tela metasObjetivos -->
+         
          <!-- inicio tela2 -->
          <div id="container_relativo">
             <div id="div_listaMetas"  class="box-escondido hideme">
@@ -303,21 +319,7 @@
             </div>
          </div>
          <!-- fim da tela 4 -->
-         <!-- iniico da tela 5 -->
-         <div id="div_metasObjetivos" style="display: none">
-            <!-- bloco de informações -->
-            <!--  <div id="listaObjetivos" class="list-style list_objetivos"> -->
-            <!-- bloco links projetos -->
-            <div class="titulo_objetivo border_bottom_gray cor_3_red">
-               <h2>
-               OBJETIVOS
-               <h2>
-            </div>
-            <ul id="ulListaObjetivos">
-            </ul>
-         </div>
-         <!-- fim da lista de objetivos -->
-         <!-- fim da tela 5 -->
+         
          <!-- inicio tela 6 -->    
          <div id="div_configuracao" class="" style="display: none">
             <div class="config_container">
