--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -133,7 +133,7 @@
                   <div class="subpref">
                      Metas
                   </div>
-                  <div class="distrito">
+                  <div class="selectMetas">
                      <select id="lista_metas_select" dir='rtl' name='distritos'>
                      </select>
                   </div>
