--- a/www/index.html
+++ b/www/index.html
@@ -133,11 +133,11 @@
                   <div class="subpref">
                      Metas
                   </div>
-                  <div class="selectMetas">
+                  <div class="distrito">
                      <select id="lista_metas_select" dir='rtl' name='distritos'>
                      </select>
                   </div>
-                  <!-- fim da barra indice de metas  -->
+                </div><!-- fim da barra indice de metas  -->
                   <!-- bloco de informações -->
                   <!-- SAITO -->
                   <ul id="ulDetalhesMeta">
@@ -148,7 +148,7 @@
                   <ul id="listaProjetosDeMetas">
                   </ul>
                </div>
-            </div>
+            
             <!-- fim da tela 3 -->
             <!-- inicio tela 4 -->
             <div id="div_detalhesProjeto" class="box-escondido hideme">
